# swt

./: Makefile.am  autogen.sh  cleanup.sh  configure.ac
doc/: README
include/: Makefile.am  Makefile.in  swt.hpp
include/swt/: ConvertUtils.h  FindWords.hpp  ImageUtils.h  Process.h  Rotate.h  SWT.hpp  SWTBoxFinder.hpp  SWTExtractor.hpp  SWTInternal.hpp  SWTLabeller.hpp  ShapeDetect.hpp  TextConfig.h  TextDetect.hpp  Timer.h
src/: ConvertUtils.cpp  FindWords.cpp  ImageUtils.cpp  Makefile.am  Makefile.in  Process.cpp  Rotate.cpp  SWT.cpp  SWTBoxFinder.cpp  SWTExtractor.cpp  SWTInternal.cpp  SWTLabeller.cpp  ShapeDetect.cpp  TextConfig.cpp  TextDetect.cpp  Timer.cpp
test/: Makefile.am  Makefile.in  textEngine.cpp  textExtract.cpp  textExtractDir.cpp
