nobase_include_HEADERS = \
    swt.hpp \
    swt/SWTBoxFinder.hpp \
    swt/SWTExtractor.hpp \
    swt/SWTLabeller.hpp \
    swt/ConvertUtils.h \
    swt/FindWords.hpp \
    swt/ImageUtils.h \
    swt/Process.h \
    swt/Rotate.h \
    swt/ShapeDetect.hpp \
    swt/SWT.hpp \
    swt/SWTInternal.hpp \
    swt/TextConfig.h \
    swt/TextDetect.hpp \
    swt/Timer.h
